Compilateur/y.output
   0  $accept : Start $end

   1  Start : tINT Main

   2  Main : tMAIN tPO tPF Block_Fonc

   3  $$1 :

   4  Block : tAO $$1 Instruction tAF

   5  $$2 :

   6  Block_Fonc : tAO $$2 Instruction Return tAF

   7  Instruction : Declarations tPV Instruction
   8              | Affectations tPV Instruction
   9              | Ifelse
  10              | While
  11              | AppelFonc
  12              |

  13  Declarations : Declaration
  14               | Declaration tV Declarations

  15  Affectations : Affectation
  16               | Affectation Affectations

  17  Declaration : tINT tID
  18              | tID

  19  $$3 :

  20  Declaration : tINT tID $$3 tEGAL Expression

  21  $$4 :

  22  Declaration : tCONST tINT tID $$4 tEGAL Expression

  23  Affectation : tID tEGAL Expression

  24  Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF Instruction
  25         | tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction

  26  $$5 :

  27  $$6 :

  28  $$7 :

  29  While : tWHILE tPO $$5 Condition tPF $$6 Block $$7 Instruction

  30  ActionJMF :

  31  ActionEndJMF :

  32  ActionJMP :

  33  ActionEndJMP :

  34  AppelFonc : tFONCTION

  35  Condition : Expression Comp Expression

  36  Comp : tSUP
  37       | tINF
  38       | tEGAL tEGAL

  39  Expression : Expression tADD Expression
  40             | Expression tSOU Expression
  41             | Expression tMUL Expression
  42             | Expression tDIV Expression
  43             | tPO Expression tPF
  44             | tID
  45             | tNB

  46  Return : tRET tNB tPV

state 0
	$accept : . Start $end  (0)

	tINT  shift 1
	.  error

	Start  goto 2


state 1
	Start : tINT . Main  (1)

	tMAIN  shift 3
	.  error

	Main  goto 4


state 2
	$accept : Start . $end  (0)

	$end  accept


state 3
	Main : tMAIN . tPO tPF Block_Fonc  (2)

	tPO  shift 5
	.  error


state 4
	Start : tINT Main .  (1)

	.  reduce 1


state 5
	Main : tMAIN tPO . tPF Block_Fonc  (2)

	tPF  shift 6
	.  error


state 6
	Main : tMAIN tPO tPF . Block_Fonc  (2)

	tAO  shift 7
	.  error

	Block_Fonc  goto 8


state 7
	Block_Fonc : tAO . $$2 Instruction Return tAF  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 9


state 8
	Main : tMAIN tPO tPF Block_Fonc .  (2)

	.  reduce 2


state 9
	Block_Fonc : tAO $$2 . Instruction Return tAF  (6)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tRET  reduce 12

	Instruction  goto 16
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 10
	Declaration : tINT . tID  (17)
	Declaration : tINT . tID $$3 tEGAL Expression  (20)

	tID  shift 24
	.  error


state 11
	Declaration : tCONST . tINT tID $$4 tEGAL Expression  (22)

	tINT  shift 25
	.  error


state 12
	Ifelse : tIF . tPO Condition tPF ActionJMF Block ActionEndJMF Instruction  (24)
	Ifelse : tIF . tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)

	tPO  shift 26
	.  error


state 13
	While : tWHILE . tPO $$5 Condition tPF $$6 Block $$7 Instruction  (29)

	tPO  shift 27
	.  error


state 14
	AppelFonc : tFONCTION .  (34)

	.  reduce 34


state 15
	Declaration : tID .  (18)
	Affectation : tID . tEGAL Expression  (23)

	tEGAL  shift 28
	tPV  reduce 18
	tV  reduce 18


state 16
	Block_Fonc : tAO $$2 Instruction . Return tAF  (6)

	tRET  shift 29
	.  error

	Return  goto 30


state 17
	Instruction : Declarations . tPV Instruction  (7)

	tPV  shift 31
	.  error


state 18
	Instruction : Affectations . tPV Instruction  (8)

	tPV  shift 32
	.  error


state 19
	Instruction : Ifelse .  (9)

	.  reduce 9


state 20
	Instruction : While .  (10)

	.  reduce 10


state 21
	Instruction : AppelFonc .  (11)

	.  reduce 11


state 22
	Declarations : Declaration .  (13)
	Declarations : Declaration . tV Declarations  (14)

	tV  shift 33
	tPV  reduce 13


state 23
	Affectations : Affectation .  (15)
	Affectations : Affectation . Affectations  (16)

	tID  shift 34
	tPV  reduce 15

	Affectations  goto 35
	Affectation  goto 23


state 24
	Declaration : tINT tID .  (17)
	Declaration : tINT tID . $$3 tEGAL Expression  (20)
	$$3 : .  (19)

	tPV  reduce 17
	tV  reduce 17
	tEGAL  reduce 19

	$$3  goto 36


state 25
	Declaration : tCONST tINT . tID $$4 tEGAL Expression  (22)

	tID  shift 37
	.  error


state 26
	Ifelse : tIF tPO . Condition tPF ActionJMF Block ActionEndJMF Instruction  (24)
	Ifelse : tIF tPO . Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 41
	Condition  goto 42


state 27
	While : tWHILE tPO . $$5 Condition tPF $$6 Block $$7 Instruction  (29)
	$$5 : .  (26)

	.  reduce 26

	$$5  goto 43


state 28
	Affectation : tID tEGAL . Expression  (23)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 44


state 29
	Return : tRET . tNB tPV  (46)

	tNB  shift 45
	.  error


state 30
	Block_Fonc : tAO $$2 Instruction Return . tAF  (6)

	tAF  shift 46
	.  error


state 31
	Instruction : Declarations tPV . Instruction  (7)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12
	tRET  reduce 12

	Instruction  goto 47
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 32
	Instruction : Affectations tPV . Instruction  (8)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12
	tRET  reduce 12

	Instruction  goto 48
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 33
	Declarations : Declaration tV . Declarations  (14)

	tINT  shift 10
	tCONST  shift 11
	tID  shift 49
	.  error

	Declarations  goto 50
	Declaration  goto 22


state 34
	Affectation : tID . tEGAL Expression  (23)

	tEGAL  shift 28
	.  error


state 35
	Affectations : Affectation Affectations .  (16)

	.  reduce 16


state 36
	Declaration : tINT tID $$3 . tEGAL Expression  (20)

	tEGAL  shift 51
	.  error


state 37
	Declaration : tCONST tINT tID . $$4 tEGAL Expression  (22)
	$$4 : .  (21)

	.  reduce 21

	$$4  goto 52


state 38
	Expression : tPO . Expression tPF  (43)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 53


state 39
	Expression : tNB .  (45)

	.  reduce 45


state 40
	Expression : tID .  (44)

	.  reduce 44


state 41
	Condition : Expression . Comp Expression  (35)
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tINF  shift 54
	tSUP  shift 55
	tEGAL  shift 56
	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	.  error

	Comp  goto 61


state 42
	Ifelse : tIF tPO Condition . tPF ActionJMF Block ActionEndJMF Instruction  (24)
	Ifelse : tIF tPO Condition . tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)

	tPF  shift 62
	.  error


state 43
	While : tWHILE tPO $$5 . Condition tPF $$6 Block $$7 Instruction  (29)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 41
	Condition  goto 63


state 44
	Affectation : tID tEGAL Expression .  (23)
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	tPV  reduce 23
	tID  reduce 23


state 45
	Return : tRET tNB . tPV  (46)

	tPV  shift 64
	.  error


state 46
	Block_Fonc : tAO $$2 Instruction Return tAF .  (6)

	.  reduce 6


state 47
	Instruction : Declarations tPV Instruction .  (7)

	.  reduce 7


state 48
	Instruction : Affectations tPV Instruction .  (8)

	.  reduce 8


state 49
	Declaration : tID .  (18)

	.  reduce 18


state 50
	Declarations : Declaration tV Declarations .  (14)

	.  reduce 14


state 51
	Declaration : tINT tID $$3 tEGAL . Expression  (20)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 65


state 52
	Declaration : tCONST tINT tID $$4 . tEGAL Expression  (22)

	tEGAL  shift 66
	.  error


state 53
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)
	Expression : tPO Expression . tPF  (43)

	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	tPF  shift 67
	.  error


state 54
	Comp : tINF .  (37)

	.  reduce 37


state 55
	Comp : tSUP .  (36)

	.  reduce 36


state 56
	Comp : tEGAL . tEGAL  (38)

	tEGAL  shift 68
	.  error


state 57
	Expression : Expression tSOU . Expression  (40)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 69


state 58
	Expression : Expression tADD . Expression  (39)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 70


state 59
	Expression : Expression tMUL . Expression  (41)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 71


state 60
	Expression : Expression tDIV . Expression  (42)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 72


state 61
	Condition : Expression Comp . Expression  (35)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 73


state 62
	Ifelse : tIF tPO Condition tPF . ActionJMF Block ActionEndJMF Instruction  (24)
	Ifelse : tIF tPO Condition tPF . ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)
	ActionJMF : .  (30)

	.  reduce 30

	ActionJMF  goto 74


state 63
	While : tWHILE tPO $$5 Condition . tPF $$6 Block $$7 Instruction  (29)

	tPF  shift 75
	.  error


state 64
	Return : tRET tNB tPV .  (46)

	.  reduce 46


state 65
	Declaration : tINT tID $$3 tEGAL Expression .  (20)
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	tPV  reduce 20
	tV  reduce 20


state 66
	Declaration : tCONST tINT tID $$4 tEGAL . Expression  (22)

	tPO  shift 38
	tNB  shift 39
	tID  shift 40
	.  error

	Expression  goto 76


state 67
	Expression : tPO Expression tPF .  (43)

	.  reduce 43


state 68
	Comp : tEGAL tEGAL .  (38)

	.  reduce 38


state 69
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression tSOU Expression .  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tMUL  shift 59
	tDIV  shift 60
	tPV  reduce 40
	tV  reduce 40
	tINF  reduce 40
	tSUP  reduce 40
	tEGAL  reduce 40
	tSOU  reduce 40
	tADD  reduce 40
	tPF  reduce 40
	tID  reduce 40


state 70
	Expression : Expression . tADD Expression  (39)
	Expression : Expression tADD Expression .  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tMUL  shift 59
	tDIV  shift 60
	tPV  reduce 39
	tV  reduce 39
	tINF  reduce 39
	tSUP  reduce 39
	tEGAL  reduce 39
	tSOU  reduce 39
	tADD  reduce 39
	tPF  reduce 39
	tID  reduce 39


state 71
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression tMUL Expression .  (41)
	Expression : Expression . tDIV Expression  (42)

	.  reduce 41


state 72
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)
	Expression : Expression tDIV Expression .  (42)

	.  reduce 42


state 73
	Condition : Expression Comp Expression .  (35)
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	tPF  reduce 35


state 74
	Ifelse : tIF tPO Condition tPF ActionJMF . Block ActionEndJMF Instruction  (24)
	Ifelse : tIF tPO Condition tPF ActionJMF . Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)

	tAO  shift 77
	.  error

	Block  goto 78


state 75
	While : tWHILE tPO $$5 Condition tPF . $$6 Block $$7 Instruction  (29)
	$$6 : .  (27)

	.  reduce 27

	$$6  goto 79


state 76
	Declaration : tCONST tINT tID $$4 tEGAL Expression .  (22)
	Expression : Expression . tADD Expression  (39)
	Expression : Expression . tSOU Expression  (40)
	Expression : Expression . tMUL Expression  (41)
	Expression : Expression . tDIV Expression  (42)

	tSOU  shift 57
	tADD  shift 58
	tMUL  shift 59
	tDIV  shift 60
	tPV  reduce 22
	tV  reduce 22


state 77
	Block : tAO . $$1 Instruction tAF  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 80


state 78
	Ifelse : tIF tPO Condition tPF ActionJMF Block . ActionEndJMF Instruction  (24)
	Ifelse : tIF tPO Condition tPF ActionJMF Block . ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction  (25)
	ActionEndJMF : .  (31)

	.  reduce 31

	ActionEndJMF  goto 81


state 79
	While : tWHILE tPO $$5 Condition tPF $$6 . Block $$7 Instruction  (29)

	tAO  shift 77
	.  error

	Block  goto 82


state 80
	Block : tAO $$1 . Instruction tAF  (4)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12

	Instruction  goto 83
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 81
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF . Instruction  (24)
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF . tELSE ActionJMP Block ActionEndJMP Instruction  (25)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tELSE  shift 84
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12
	tRET  reduce 12

	Instruction  goto 85
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 82
	While : tWHILE tPO $$5 Condition tPF $$6 Block . $$7 Instruction  (29)
	$$7 : .  (28)

	.  reduce 28

	$$7  goto 86


state 83
	Block : tAO $$1 Instruction . tAF  (4)

	tAF  shift 87
	.  error


state 84
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE . ActionJMP Block ActionEndJMP Instruction  (25)
	ActionJMP : .  (32)

	.  reduce 32

	ActionJMP  goto 88


state 85
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF Instruction .  (24)

	.  reduce 24


state 86
	While : tWHILE tPO $$5 Condition tPF $$6 Block $$7 . Instruction  (29)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12
	tRET  reduce 12

	Instruction  goto 89
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 87
	Block : tAO $$1 Instruction tAF .  (4)

	.  reduce 4


state 88
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP . Block ActionEndJMP Instruction  (25)

	tAO  shift 77
	.  error

	Block  goto 90


state 89
	While : tWHILE tPO $$5 Condition tPF $$6 Block $$7 Instruction .  (29)

	.  reduce 29


state 90
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block . ActionEndJMP Instruction  (25)
	ActionEndJMP : .  (33)

	.  reduce 33

	ActionEndJMP  goto 91


state 91
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP . Instruction  (25)
	Instruction : .  (12)

	tINT  shift 10
	tCONST  shift 11
	tIF  shift 12
	tWHILE  shift 13
	tFONCTION  shift 14
	tID  shift 15
	tAF  reduce 12
	tRET  reduce 12

	Instruction  goto 92
	Declarations  goto 17
	Affectations  goto 18
	Ifelse  goto 19
	While  goto 20
	AppelFonc  goto 21
	Declaration  goto 22
	Affectation  goto 23


state 92
	Ifelse : tIF tPO Condition tPF ActionJMF Block ActionEndJMF tELSE ActionJMP Block ActionEndJMP Instruction .  (25)

	.  reduce 25


27 terminals, 28 nonterminals
47 grammar rules, 93 states
